# ShuDong

./: .gitignore  .gitreview  .ruff.toml  BUILD  LICENSE  MODULE.bazel  README.md  lint.sh  main.py  requirements.txt  routes.py
api/: BUILD  event_handler.py  event_handler_test.py  messages.py
static/: BUILD  constants.py
tools/format/: BUILD
tools/lint/: BUILD
